--- a/package.json
+++ b/package.json
@@ -1,112 +1,113 @@
 {
-  "name": "practice-react-form",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.91",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/*.{ts,js,tsx,jsx}",
-    "lint-css": "stylelint 'src/**/*.{tsx,jsx}'"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "airbnb",
-      "airbnb-base",
-      "prettier"
-    ],
-    "plugins": [
-      "react-hooks",
-      "import/config/recommended",
-      "react",
-      "react/configs/recommended",
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "react/require-default-props": "off",
-      "react/react-in-jsx-scope": "off",
-      "react/jsx-filename-extension": [
-        1,
-        {
-          "extensions": [
-            ".js",
-            ".jsx",
-            ".ts",
-            ".tsx"
-          ]
-        }
-      ],
-      "react/function-component-definition": [
-        "error",
-        {
-          "namedComponents": [
-            "arrow-function",
-            "function-declaration"
-          ]
-        }
-      ],
-      "import/extensions": 0,
-      "no-shadow": "off",
-      "@typescript-eslint/no-shadow": "error",
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "error"
+    "name": "practice-react-form",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.91",
+        "@types/react": "^18.2.67",
+        "@types/react-dom": "^18.2.22",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
+        "react-scripts": "5.0.1",
+        "styled-components": "^6.1.8",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4"
     },
-    "settings": {
-      "import/resolver": {
-        "node": {
-          "extensions": [
-            ".js",
-            ".jsx",
-            ".ts",
-            ".tsx"
-          ]
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "eslint ./src/**/*.{ts,js,tsx,jsx}",
+        "lint-css": "stylelint 'src/**/*.{tsx,jsx}'"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest",
+            "airbnb",
+            "airbnb-base",
+            "prettier"
+        ],
+        "plugins": [
+            "react-hooks",
+            "import/config/recommended",
+            "react",
+            "react/configs/recommended",
+            "@typescript-eslint"
+        ],
+        "rules": {
+            "react/require-default-props": "off",
+            "react/react-in-jsx-scope": "off",
+            "react/jsx-filename-extension": [
+                1,
+                {
+                    "extensions": [
+                        ".js",
+                        ".jsx",
+                        ".ts",
+                        ".tsx"
+                    ]
+                }
+            ],
+            "react/function-component-definition": [
+                "error",
+                {
+                    "namedComponents": [
+                        "arrow-function",
+                        "function-declaration"
+                    ]
+                }
+            ],
+            "import/extensions": 0,
+            "no-shadow": "off",
+            "@typescript-eslint/no-shadow": "error",
+            "no-unused-vars": "off",
+            "@typescript-eslint/no-unused-vars": "error",
+            "jsx-a11y/label-has-associated-control": 0
+        },
+        "settings": {
+            "import/resolver": {
+                "node": {
+                    "extensions": [
+                        ".js",
+                        ".jsx",
+                        ".ts",
+                        ".tsx"
+                    ]
+                }
+            }
         }
-      }
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.5.0",
+        "eslint": "^8.57.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-react": "^7.34.3",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "postcss-styled-syntax": "^0.6.4",
+        "prettier": "3.3.2",
+        "stylelint": "^16.6.1",
+        "stylelint-config-standard": "^36.0.1",
+        "typescript-eslint": "^7.13.1"
     }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss-styled-syntax": "^0.6.4",
-    "prettier": "3.3.2",
-    "stylelint": "^16.6.1",
-    "stylelint-config-standard": "^36.0.1",
-    "typescript-eslint": "^7.13.1"
-  }
 }
